# persona-object-protocol

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  README.zh-CN.md  TRY_POP.md  adapter_crewai.py  example_autogen.py  example_crewai.py  example_crewai_export.py  example_crewai_multiagent_export.py  example_registry.py  plugin_config.example.json  plugin_config.packages.example.json  plugin_config.schema.json  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: pop-package-check.yml  pop-schema-gate.yml  publish.yml  pypi-publish.yml  testpypi-publish.yml  validate.yml
adapters/: __init__.py  langchain_adapter.py
adapters/crewai/: README.md
adapters/langchain/: README.md
adapters/llamaindex/: README.md
adapters/microsoft-agent-framework/: README.md
cli/: pop_cli.py
demos/: discovery.py  market_research_task.json  persona_agent_demo.py  persona_definitions.py  persona_workflow_demo.py  product_design_task.json  stage_handlers.py  task_context.py  task_input.schema.json  task_registry.py  task_types.py  ux_review_task.json
docs/: README.md  architecture-position.md  cite-pop.md  communication-kit.md  execution-layer.md  fdo-relation-note.md  interop.md  langchain-maintainer-note.md  one-line-positioning.md  pop-adapter-model.md  pop-ecosystem-roadmap.md  pop-evolution-v0.1.0-v0.1.4.md  pop-persona-layer-diagram.md  pop-vs-intent-layer.md  pypi-publishing-plan.md  pypi-trusted-publisher-setup.md  quickstart.md  release-discipline.md  runtime-adapters.md  schema-evolution.md  short-outreach-kit.md  testpypi-trusted-publisher-setup.md
docs/migrations/: MIGRATION_TEMPLATE.md  none-to-v0.1.0.md
docs/outreach/: langchain-evaluation-checklist.md  langchain-forum-post.md  langchain-forum-post.zh.md  langchain-maintainer-short-note.md  langchain-maintainer-short-note.zh.md
docs/quickstart/: langchain-minimal-adoption.md
docs/releases/: v0.1.0-release-notes.md  v0.1.1-announcement.md  v0.1.1-release-notes.md  v0.1.2-plan.md  v0.1.2-release-notes.md  v0.1.3-plan.md  v0.1.3-release-notes.md  v0.1.4-plan.md  v0.1.4-release-notes.md  v0.1.5-announcement.md  v0.1.5-plan.md  (+6 more)
examples/: langchain_agent.py  langchain_middleware_demo.py  mentor.v1.json  teacher.v1.json
integrations/langchain-pop/: .gitignore  MANIFEST.in  README.md  RELEASE_UPDATE.md  pyproject.toml
integrations/langchain-pop/.github/workflows/: publish.yml  test.yml
integrations/langchain-pop/docs/: langchain-docs-pr-draft.md  langchain_pop.mdx
integrations/langchain-pop/examples/: langchain_middleware_demo.py
integrations/langchain-pop/src/langchain_pop/: _pop_compat.py  agent.py  middleware.py
integrations/langchain-pop/tests/: test_agent.py  test_middleware.py
integrations/langchain-pop/tests/fixtures/: mentor.pop01.json  mentor.v1.json
personas/: agents.crewai.yaml  design_persona.json  designer.json  engineer.json  marketing_manager.crewai.yaml  marketing_manager.json  marketing_persona.json  researcher_persona.json
pop/: __init__.py  adapter_autogen.py  adapter_crewai.py  loader.py  persona_loader.py  registry.py  schema.py
schema/: persona.schema.json  pop-persona.schema.json  pop.schema.json
spec/: POP-agent-runtime-profile.md  POP-core.md  POP-json-binding.md  pop-0.1.md
tests/: test_adapter_classes.py  test_adapter_contracts.py  test_crewai_execution_helpers.py  test_crewai_integration.py  test_langchain_execution_bundle.py  test_langchain_execution_contract.py  test_langchain_execution_helpers.py  test_langchain_installed_package_contract.py  test_langchain_integration.py  test_langchain_minimal_adoption_path.py  test_langchain_optional_dependency.py  test_pop_agent_runtime_profile_schema.py  test_pop_autogen_adapter.py  test_pop_cli_registry.py  test_pop_crewai_crewbase_demo.py  test_pop_crewai_export.py  test_pop_crewai_multiagent_yaml.py  test_pop_crewai_recommended_yaml_demo.py  test_pop_registry.py  test_schema_validation.py  test_smoke.py
validation/: README.md
(+78 files in other folders)
