[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pop-persona"
version = "0.1.0"
description = "Framework-neutral persona object protocol for agent runtimes."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Bin Zhang" }
]

[project.optional-dependencies]
schema = [
  "jsonschema>=4.25,<5"
]
langchain = [
  "langchain>=1.0.0",
  "langchain-openai>=0.3.0"
]

[project.urls]
Homepage = "https://github.com/joy7758/persona-object-protocol"
Repository = "https://github.com/joy7758/persona-object-protocol"
Issues = "https://github.com/joy7758/persona-object-protocol/issues"

[project.scripts]
pop = "pop_protocol.cli:main"
pop-inspect = "pop.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
